--- a/Project/style.css
+++ b/Project/style.css
@@ -5,7 +5,49 @@
 }
 
 .navbar{
-    height: 50;
+    height: 50px;
     background-color: #0f1111;
     color: white;
+    display: flex;
+    align-items: center;
+}
+
+.nav-logo{
+    height: 50px;
+    width: 100px;
+}
+
+.logo{
+    background-image: url(amazon_logo.png);
+    background-size: cover;
+    height: 50px;
+    width: 100%;
+}
+
+.border{
+    border: 1.5px solid transparent;
+}
+
+.border:hover{
+    border: 1.5px solid white;
+}
+
+.add-first{
+    color: #cccc;
+    font-size: 0.85rem;
+    margin-left: 15px;
+}
+
+.add-sec{
+    font-size: 1rem;
+    margin-right: 3px;
+}
+
+.add-icon{
+    display: flex
+    align-iems=center;
+}
+
+.nav-search{
+    display: flex;
 }
