--- a/Project/style.css
+++ b/Project/style.css
@@ -65,3 +65,9 @@
     border-bottom-left-radius: 4px;
     border: none;
 }
+
+.search-input{
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+}
