--- a/Project/style.css
+++ b/Project/style.css
@@ -107,3 +107,17 @@ span{
     font-weight: 800;
 }
 
+.panel{
+    height: 40px;
+    background-color: #222f3d;
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+
+.panel-ops p{
+    display: inline;
+
+}
