--- a/Project/style.css
+++ b/Project/style.css
@@ -119,5 +119,16 @@ span{
 
 .panel-ops p{
     display: inline;
-
+    margin-left: 15px;
 }
+
+.panel-ops{
+    width: 70%;
+    font-size: 0.85rem;
+}
+
+.panel-deals{
+    font-size: 0.9rem;
+    font-weight: 700%;
+}
+
