--- a/Project/style.css
+++ b/Project/style.css
@@ -132,3 +132,19 @@ span{
     font-weight: 700%;
 }
 
+.hero-section{
+    background-image: url("hero_image.jpg");
+    background-size: cover;
+    height: 600px;
+}
+
+.hero-msg{
+    background-color: white;
+    color: black;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+
