--- a/Project/style.css
+++ b/Project/style.css
@@ -135,7 +135,10 @@ span{
 .hero-section{
     background-image: url("hero_image.jpg");
     background-size: cover;
-    height: 600px;
+    height: 380px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .hero-msg{
@@ -145,6 +148,12 @@ span{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    font-size: 0.85rem;
+    width: 80%;
+    margin-bottom: 25px;
 }
 
+.hero-msg a{
+    color: #007185;
+}
 
