--- a/Project/style.css
+++ b/Project/style.css
@@ -157,8 +157,14 @@ span{
     color: #007185;
 }
 
+.shop-section{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #e2e7e6;
+}
 .box{
     border: 2px solid black;
-    height: 100px;
-    
+    height: 350px;
+    width: 23%;
+    background-color: white;
 }
