--- a/Project/style.css
+++ b/Project/style.css
@@ -187,3 +187,17 @@ span{
 .box-content p{
     color: #007185;
 }
+
+footer{
+    margin-top: 15px;
+}
+
+.foot-panel1{
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: centre;
+    font-size: 0.85rem;
+}
