--- a/Project/style.css
+++ b/Project/style.css
@@ -201,3 +201,9 @@ footer{
     align-items: centre;
     font-size: 0.85rem;
 }
+
+.foot-panel2{
+    background-color: #222f3d;
+    color: white;
+    height: 300px;
+}
