--- a/Project/style.css
+++ b/Project/style.css
@@ -206,4 +206,16 @@ footer{
     background-color: #222f3d;
     color: white;
     height: 300px;
+    display: flex;
+    justify-content: space-evenly;
+}
+ul{
+    margin-top: 20px;
+}
+
+ul a{
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+    color: #dddddd;
 }
