--- a/Project/style.css
+++ b/Project/style.css
@@ -237,3 +237,14 @@ ul a{
     height: 50px;
     width: 100%;
 }
+
+.foot-panel4{
+    background-color: #0f1111;
+    color: white;
+    height: 100px;
+    /* display: flex;
+    justify-content: center;
+    align-items: centre; */
+
+}
+
